# plotly-oftw

./: .gitignore  pixi.toml  pyproject.toml
oftw/: app.py  data.py
oftw/pages/: home.py
