[project]
authors = [
    { name = "RenaudLN", email = "renaudlaine31@gmail.com" },
]
name = "oftw"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default"}
app = { features = [], solve-group = "default"}

[tool.pixi.dependencies]
python = "3.12.*"
dash = ">=3"
plotly = ">=6"
polars = ">=1.24.0,<2"
dash-mantine-components = ">=1.1"
dash-pydantic-utils = ">=0.14.9,<0.15"
humanize = ">=4.12.1,<5"

[tool.pixi.pypi-dependencies]
oftw = { editable = true, path="."}

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"
pixi-kernel = "*"
pre-commit = ">=4.2.0,<5"
ruff = ">=0.11.2,<0.12"
